Fix top level spacing in diagrams.html

--- a/assets/css/modules/_deliverables.scss
+++ b/assets/css/modules/_deliverables.scss
@@ -87,9 +87,8 @@ Deliverables Section Styles
   visibility: hidden;
 }
 
-#ui-mockups-anchor {
+#current-process-flow-diagram-anchor {
   top: -80px;
-  margin-top: 80px;
 }
 
 #sitemap-toplevel-anchor {
